adicionando imagens de fundo

--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -6,8 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de imagem de fundo</title>
     <style>
+        body {
+            background-image: url(images/wallpaper002.jpg);
+            min-width: 350px;
+            max-width: 1000px;
+        }
         div.quadrado {
+            display: inline-block;
+            width: 200px;
+            height: 200px;
+            background-color: lightgrey;
             border: 2px solid black;
+            border-radius: 10px;
+        }
+
+        div#q1 {
+            background-color: skyblue;
+        }
+
+        div#q2 {
+            background-image: linear-gradient(to bottom, yellow, rgba(255, 0, 0, 0.726));
+        }
+
+        div#q3 {
+            background-image: url(images/pattern001.png);
+        }
+
+        div#q4 {
+            background-image: url(images/pattern002.png);
+            background-size: contain;
+        }
+        
+        div#q5 {
+            background-image: url(images/perfil-github-m.jpeg);
+            margin-left: 5px;
+            background-position: bottom;
+            background-size: 90% ;
+            border-top-left-radius: 50%;
+            border-top-right-radius: 50%;
+            border-bottom-left-radius: 50%;
+            border-bottom-right-radius: 50%;
         }
     </style>
 </head>
@@ -19,6 +57,12 @@
 
     </div>
     <div class="quadrado" id="q3">
+
+    </div> 
+    <div class="quadrado" id="q4">
+
+    </div>
+    <div class="quadrado" id="q5">
 
     </div>
 </body>
