adicionei shorthand background

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(images/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; 
+            */
+
+            /* Shorthand Background: ; 
+                color > image > position > [size]> attachment
+            */
+            background: black url(images/wallpaper002.jpg) no-repeat center center fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
