--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -88,7 +88,7 @@
         </article>
     </main>
     <footer>
-        <p>Site cirado por <a href="https://www.instagram.com/vinicius_lavoura/?next=%2F" target="blank">Vinicius Lavoura</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoEmVideo</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/vinicius_lavoura/?next=%2F" target="blank">Vinicius Lavoura</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoEmVideo</a></p>
     </footer>
 </body>
 </html>
