--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,14 +11,17 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-        tr.linha {
-            background-color: lightgrey;
         }
         td {
             padding: 8px;
             border: 1px solid black;
+            text-align: center; /* Alinhamento Horizontal */
+            vertical-align: top; /* Alinhamento Vertical */
+        }
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -30,7 +33,7 @@
                 TABLE HEADER = cabeçalho de tabela
                 TABLE DATA = dado de tabela -->
     <table>
-        <tr class="linha"> <!--Primeira linha-->
+        <tr> <!--Primeira linha-->
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -38,16 +41,16 @@
         <tr> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
-        <tr class="linha"> <!-- Terceira linha-->
+        <tr> <!-- Terceira linha-->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha-->
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
     </table>
